# AIStart

./: .gitignore  README.md  pyproject.toml
aistart/: __init__.py  __main__.py  agents.py  cli.py  config.py  launchers.py  tui.py  usage.py
docs/: aistart.md
man/: aistart.1
tests/: test_agents.py  test_cli.py  test_launchers.py  test_tui.py  test_usage.py
