[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aistart"
version = "0.1.0"
description = "Launch agentic coding tools from a CLI or terminal UI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Norman Anorman" }]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = [
  "rich>=13.0",
  "textual>=0.80",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
aistart = "aistart.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
